--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-session": "^2.0.0-beta.3",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.3",
+    "concurrently": "^3.5.1",
     "express": "^4.16.3",
+    "express-minify": "^1.0.0",
+    "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.0",
-    "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "validator": "^10.8.0"
   }
 }
