--- a/client/package.json
+++ b/client/package.json
@@ -5,17 +5,21 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "antd": "^3.10.4",
+    "antd-theme-webpack-plugin": "^1.3.6",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "customize-cra": "^1.0.0",
+    "customize-cra-react-refresh": "^1.1.0",
     "normalize.css": "^8.0.0",
-    "react": "^16.6.0",
+    "react": "^16.13.1",
     "react-app-rewire-less": "^2.1.3",
-    "react-app-rewired": "^1.6.2",
-    "react-dom": "^16.6.0",
+    "react-app-rewired": "^2.1.6",
+    "react-dom": "^16.13.1",
     "react-redux": "^5.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "styled-components": "^3.2.6"
